[package]
name = "wasm"
version = "0.1.0"
authors = ["Citruspress <simon.hemaker@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
js-sys = "0.3.6"
wasm-bindgen = "0.2"
rand = { version = "0.7", features = ["wasm-bindgen"] }
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'KeyboardEvent',
  'Performance',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  'WebGlTexture',
  'WebGlUniformLocation',
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
debug = true